--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^5.3.5"
+    "express-handlebars": "^5.3.5",
+    "mongoose": "^5.13.20"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
