--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^5.3.5",
-    "mongoose": "^5.13.20"
+    "mongoose": "^5.13.20",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
