--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "dongnv",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^5.3.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.20",
     "mongoose-slug-generator": "^1.0.4"
   },
